# x502api

./: .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  e502.rules  x502api.def  x502api.rc.in  x502libs.cmake
arch/: PKGBUILD.in  x502api.install.in
cmake/modules/: FindLibUSB.cmake
debian/: changelog.in  control.in  copyright.in  libe502api1.install  libe502api1.postinst  libl502api1.install  libx502api1.install  rules
devs/: CMakeLists.txt
devs/e502/: CMakeLists.txt  e502_cm4_defs.h  e502_tcp_protocol.h  e502api.c  e502api.def  e502api.h  e502api.rc.in  e502api_dnssd.c  e502api_eth_config.c  e502api_private.h  e502api_tcp.c  e502api_tcp_private.h  e502api_usb.c
devs/e502/cmake/modules/: FindAvahi.cmake  FindDNSSD.cmake  FindLibUSB.cmake
devs/e502/pas/: e502api.pas
devs/l502/: CMakeLists.txt  l502_fpga_regs.h  l502api.c  l502api.def  l502api.h  l502api.rc.in  l502api_bf.c  l502api_compat.c  l502api_compat.h  l502api_eeprom.c  l502api_private.h  lpcie_ioctls.h
devs/l502/linux/: l502_ioctls.h  l502_spec.c
devs/l502/pas/: l502api.pas
devs/l502/win/: l502_spec.c  l502api.rc.in
doc/: Doxyfile.in  about.md  config.xml.in  gen_descr.md  mainpage.md  setup.md  x502api.tex
doc/images/: adc_frame.odg
examples/CppBuilder/x502_general/: readme.txt  unit.cpp  unit.dfm  unit.h  x502_example.bpr  x502_example.cbproj  x502_example.cpp  x502_thread.cpp  x502_thread.h
examples/Delphi/x502_general/: MainUnit.dfm  MainUnit.pas  X502_ProcessThread.pas  readme.txt  x502_example.dof  x502_example.dpr  x502_example.dproj
examples/LabView/x502_out/: generate_multiharm_signal_points.vi  generate_sin_point.vi  lcm.vi  readme.txt  x502_close.vi  x502_gen_signal.vi  x502_open.vi  x502_out.vi  x502_out_cfg.vi  x502_set_cycle_signal.vi  x502_stop.vi
examples/LabView/x502_out/10.0/: generate_multiharm_signal_points.vi  generate_sin_point.vi  lcm.vi  x502_close.vi  x502_err_sub.vi  x502_gen_signal.vi  x502_open.vi  x502_out.vi  x502_out_cfg.vi  x502_set_cycle_signal.vi  x502_stop.vi
examples/LabView/x502_out/8.0/: generate_multiharm_signal_points.vi  generate_sin_point.vi  lcm.vi  x502_close.vi  x502_gen_signal.vi  x502_open.vi  x502_out.vi  x502_out_cfg.vi  x502_set_cycle_signal.vi  x502_stop.vi
examples/LabView/x502_recv/: multigraph_settings.ctl  readme.txt  x502_err_sub.vi  x502_recv.vi
examples/LabView/x502_recv/10.0/: x502_err_sub.vi  x502_recv.vi
examples/LabView/x502_recv/8.0/: x502_err_sub.vi  x502_recv.vi
examples/LabView/x502_recv_out_cycle/: readme.txt  x502_err_sub.vi  x502_recv_out_cycle.vi
examples/LabView/x502_recv_out_cycle/10.0/: x502_recv_out_cycle.vi
examples/LabView/x502_recv_out_cycle/8.0/: x502_err_sub.vi  x502_recv_out_cycle.vi
examples/LabView/x502_recv_out_cycle_eng/: readme.txt  x502_err_sub.vi  x502_recv_out_cycle_eng.vi
examples/LabView/x502_recv_out_cycle_eng/10.0/: x502_err_sub.vi  x502_recv_out_cycle_eng.vi
examples/LabView/x502_recv_out_cycle_eng/8.0/: x502_err_sub.vi  x502_recv_out_cycle_eng.vi
examples/c/: CMakeLists.txt
examples/c/e502_eth_svc_browse/: CMakeLists.txt  e502_eth_svc_browse.sln  e502_eth_svc_browse.vcproj  main.c  makefile
examples/c/x502_cycle_out/: CMakeLists.txt  main.c  makefile  x502_cycle_out.sln  x502_cycle_out.vcproj
examples/c/x502_stream_read/: CMakeLists.txt  main.c  makefile  x502_stream_read.sln  x502_stream_read.vcproj
examples/cs/e502_eth_svc_browse/: Program.cs  e502_eth_svc_browse.csproj
examples/cs/e502_eth_svc_browse/Properties/: AssemblyInfo.cs
examples/cs/x502_general/: MainForm.Designer.cs  MainForm.cs  Program.cs  x502_general.csproj  x502_general.sln
examples/cs/x502_general/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
examples/vb6/l502_recv/: MSSCCPRJ.SCC  MainForm.frm  l502_recv.vbp  l502_recv.vbw  l502api.bas  readme.txt
examples/vb6/x502_general/: e502api.bas  l502api.bas  readme.txt  x502_example.frm  x502_example.vbp  x502_example.vbw  x502api.bas
pas/: e502api.pas  x502api.pas
rpm/: x502api.spec.in
src/: fast_crc_cfg.h  l502_bf_cmd_defs.h  lboot_req.h  lcard_pstdint.h  lpcie.h  lstdtypes.h  osspec_cfg.h  pstdint.h  x502_config.c  x502_eeprom.h  x502_errs.c  x502_fpga_regs.h  x502api.c  x502api.h  x502api_async.c  x502api_bf.c  x502api_config.c  x502api_eeprom.c  x502api_errs.c  x502api_private.h  x502api_streams.c
src/devs/: CMakeLists.txt
src/devs/e502/: CMakeLists.txt  e502_eth_config.h  e502api.c  e502api.h  e502api_eth_config.c  e502api_private.h  e502api_tcp.c  e502api_usb.c
src/e502/: e502_cm4_defs.h  e502_fpga_regs.h  e502_tcp_protocol.h  e502api.c  e502api.h  e502api_private.h  e502api_tcp.c  e502api_usb.c
tests/: CMakeLists.txt
tests/x502_rdy_cntr_tst/: CMakeLists.txt  main.c
win_install/: conv_src_cp1251.bat.in  make32.bat.in  make64.bat.in  readme.txt  winpaths.cmake
